--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Jaykumar",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-validator": "^6.14.2",
